# generic-environments

./: .gitignore  CoreGenericEnv.v  Core_Generic_Env.v  GenericEnv.v  GenericEnvList.v  Generic_Env.v  Generic_Env_List.v  Generic_Var.v  LICENSE  Make  Makefile  README.md  coq-generic-environments.opam  description  index.md  meta.yml
.github/workflows/: coq-action.yml
