opam-version: "2.0"
maintainer: "aerabi@gmx.de"
version: "dev"

homepage: "https://github.com/coq-community/generic-environments"
dev-repo: "git+https://github.com/coq-community/generic-environments.git"
bug-reports: "https://github.com/coq-community/generic-environments/issues"
license: "MIT"

synopsis: "Generic Environments is a library that provides an abstract data type for environments"
description: """
Generic Environments is a library which provides an abstract data type of environments, as a functor parameterized by a module defining variables, and a function which builds environments for such variables with any Type of type. Usual operations over environments are defined, along with an extensive set of basic and more advanced properties. Moreover, an implementation using lists satisfying and all the required properties is provided.
"""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" 
]

tags: [
  "category:Mathematics/Logic/Type theory"
  "keyword:generic environments"
  "keyword:typing"
  "keyword:type theory"
  "logpath:GenericEnvironments"
]
authors: [
  "Emmanuel Polonowski <emmanuel.polonowski@u-pec.fr>"
]
